--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
   "version": 2,
-  "rewrites": [
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "vite.config.ts",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist/static",
+        "cleanUrls": true
+      }
     }
   ],
   "routes": [
@@ -12,6 +16,11 @@
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
       }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/",
+      "status": 200
     }
   ]
 }
