--- a/vercel.json
+++ b/vercel.json
@@ -5,14 +5,14 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist/static"
+        "distDir": "dist"
       }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/static/$1"
+      "dest": "/$1"
     }
   ]
 }
