--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev:client": "vite --host --port 3000",
     "dev": "pnpm dev:client",
-    "build:client": "vite build --outDir dist/static --base=/static/",
-    "build": "rm -rf dist && pnpm build:client && cp package.json dist && cp -r public dist/static && touch dist/build.flag"
+    "build:client": "vite build --outDir dist --base=/",
+    "build": "rm -rf dist && pnpm build:client"
   },
   "dependencies": {
     "clsx": "^2.1.1",
