--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:client": "vite --host --port 3000",
     "dev": "pnpm dev:client",
-    "build:client": "vite build --outDir dist --base=./",
+    "build:client": "vite build --outDir dist --base=/",
     "build": "rm -rf dist && pnpm build:client",
     "preview": "vite preview --port 3000"
   },
@@ -31,5 +31,10 @@
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "pnpm": {
+    "approvedDependencies": [
+      "esbuild"
+    ]
   }
 }
