--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "esbuild": "^0.20.2",
     "framer-motion": "^12.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -33,8 +34,18 @@
     "vite-tsconfig-paths": "^5.1.4"
   },
   "pnpm": {
-    "approvedDependencies": [
-      "esbuild"
-    ]
+    "allowedDeprecatedVersions": {
+      "esbuild": "0.20.2"
+    },
+    "peerDependencyRules": {
+      "ignoreMissing": ["esbuild"]
+    },
+    "neverBuiltDependencies": [],
+    "patchedDependencies": {
+      "esbuild@0.20.2": "patches/esbuild@0.20.2.patch"
+    },
+    "scripts": {
+      "preinstall": "pnpm approve-builds --esbuild"
+    }
   }
 }
