--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,21 @@
 {
   "version": 2,
-  "buildCommand": "pnpm run build",
-  "installCommand": "pnpm install",
+  "buildCommand": "pnpm approve-builds --esbuild && pnpm run build",
+  "installCommand": "pnpm install --unsafe-perm --shamefully-hoist",
   "outputDirectory": "dist",
   "routes": [
+    {
+      "src": "/health",
+      "dest": "/health.html",
+      "headers": {
+        "Cache-Control": "public, max-age=0, must-revalidate"
+      }
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html",
       "headers": {
-        "Cache-Control": "no-cache, no-store, must-revalidate",
-        "Pragma": "no-cache",
-        "Expires": "0"
+        "Cache-Control": "public, max-age=0, must-revalidate"
       }
     }
   ],
@@ -19,13 +24,32 @@
   ],
   "headers": [
     {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "no-cache, no-store, must-revalidate"
+          "value": "public, max-age=0, must-revalidate"
         }
       ]
+    }
+  ],
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "forceInstall": true,
+        "includeFiles": ["**"]
+      }
     }
   ]
 }
