--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "pnpm approve-builds --esbuild && pnpm run build",
+  "buildCommand": "pnpm run build",
   "installCommand": "pnpm install --unsafe-perm --shamefully-hoist",
   "outputDirectory": "dist",
   "routes": [
