--- a/package.json
+++ b/package.json
@@ -45,7 +45,14 @@
       "esbuild@0.20.2": "patches/esbuild@0.20.2.patch"
     },
     "scripts": {
-      "preinstall": "pnpm approve-builds --esbuild"
+      "preinstall": "pnpm approve-builds esbuild"
+    },
+    "packageExtensions": {
+      "esbuild@0.20.2": {
+        "scripts": {
+          "postinstall": "node scripts/postinstall.js"
+        }
+      }
     }
   }
 }
